--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -18,7 +18,7 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://scenes/world/levels/common_room.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://scenes/world/", "res://scenes/world/levels/", "res://scenes/test/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/global/", "res://scenes/", "res://scenes/world/", "res://scenes/world/levels/", "res://scenes/test/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -29,15 +29,15 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/test/map_visualizer_test.tscn", "res://scenes/world/levels/corridor_room.tscn", "res://scenes/world/levels/common_room.tscn")
-current_scene="res://scenes/world/levels/common_room.tscn"
+current_scene="res://scenes/test/map_visualizer_test.tscn"
 center_split_offset=-257
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/test/camera_2d_moving_arros.gd", "res://scripts/test/character_body_3d.gd", "res://scripts/global/global_constants.gd", "res://scripts/main_scene/main_ui.gd", "res://scripts/global/test/map_visualizer_test.gd", "res://scripts/global/test/map_visualizer_test_old.gd", "res://scripts/world/light/omni_light_3d_torch_fire.gd", "res://scripts/ui/player_ui.gd", "res://scripts/data/rooms/room_data.gd", "res://scripts/data/rooms/room_data_campus.gd", "res://scripts/data/rooms/room_data_corridor.gd", "res://scripts/data/rooms/room_data_initial.gd", "res://scripts/world/generation/world_generator.gd"]
+open_scripts=["res://scenes/test/camera_2d_moving_arros.gd", "res://scripts/test/character_body_3d.gd", "res://scripts/global/global_constants.gd", "res://scripts/main_scene/main_ui.gd", "res://scripts/global/test/map_visualizer_test.gd", "res://scripts/world/light/omni_light_3d_torch_fire.gd", "res://scripts/ui/player_ui.gd", "res://scripts/data/rooms/room_data.gd", "res://scripts/data/rooms/room_data_campus.gd", "res://scripts/data/rooms/room_data_corridor.gd", "res://scripts/data/rooms/room_data_initial.gd", "res://scripts/world/generation/world_generator.gd"]
 selected_script="res://scripts/world/light/omni_light_3d_torch_fire.gd"
 open_help=["Array"]
 script_split_offset=196
@@ -65,7 +65,7 @@ show_search=true
 
 screen=0
 mode="maximized"
-position=Vector2i(1920, 23)
+position=Vector2i(0, 28)
 
 [GameView]
 
