--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -697,11 +697,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 36,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 50,
-"scroll_position": 31.0,
+"row": 2,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -725,16 +725,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 51,
+"column": 54,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 29,
-"scroll_position": 14.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 29,
-"selection_to_column": 51,
-"selection_to_line": 29,
+"row": 12,
+"scroll_position": 5.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -743,11 +739,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 54,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 37,
-"scroll_position": 21.0,
+"row": 97,
+"scroll_position": 6.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -905,10 +901,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 34,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 3,
+"row": 2,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -919,10 +915,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 11,
+"column": 21,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
+"row": 6,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
